<resources>
    <string name="app_name">SUST Diary</string>

    <string name="developed_by_cse_sust">Developed by CSE, SUST</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="more">More</string>


    <string name="departments">Departments</string>
    <string name="administration">Administration</string>
    <string name="institute_and_center">Institute and Center</string>
    <string name="offices">Offices</string>
    <string name="holiday">Holidays</string>
    <string name="about">About</string>
    <string name="location">Location</string>

    <string-array name="nav_item_titles">
        <item>Departments</item>
        <item>Administration</item>
        <item>Institute and Center</item>
        <item>Offices</item>
        <item>Holidays</item>
        <item>About</item>
        <item>Location</item>
    </string-array>

    <string name="shahjalal_university_of_science_and_technology">Shahjalal University of Science and Technology</string>
    <string name="title_activity_teacher_list">Teacher</string>
    <string name="title_activity_profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="contact_information">Contact Information</string>
    <string name="office_address">Office Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="search">Search</string>
    <string name="website">Website</string>
    <string name="title_activity_search">Search</string>
    <string name="search_hint">Search a Teacher</string>


</resources>
