<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.sust.diary.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >

        <TextView
            android:id="@+id/dialog_teacher_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_regular"
            android:text="M. Jahirul Islam, PhD., PEng."
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dialog_designation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_teacher_name_text"
            android:fontFamily="@font/oswald_regular"
            android:text="Professor"
            android:textColor="@color/textColorLight"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/contact_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_designation_text"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/oswald_regular"
            android:text="@string/contact_information" />

        <View
            android:id="@+id/vertical_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/contact_info_text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimaryDark" />

        <!-- Address -->
        <LinearLayout
            android:id="@+id/address_full_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vertical_line"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="2dp" >

            <TextView
                android:id="@+id/office_address_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_regular"
                android:text="@string/office_address" />

            <TextView
                android:id="@+id/address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/oswald_regular"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="Room: 213, Dept. of CSE, M A Wazed Miah IICT Building, SUST"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

        </LinearLayout>

        <!-- Email Layout -->
        <LinearLayout
            android:id="@+id/email_full_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_full_layout"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="2dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/email_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_regular"
                android:text="@string/email" />

            <LinearLayout
                android:id="@+id/sust_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:weightSum="4">

                <TextView
                    android:id="@+id/sust_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:fontFamily="@font/oswald_regular"
                    android:text="jahir-cse@sust.edu"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/email_button"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/circle_icon_selector"
                    android:scaleType="center"
                    android:src="@drawable/ic_email"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/personal_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:weightSum="4">

                <TextView
                    android:id="@+id/personal_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:fontFamily="@font/oswald_regular"
                    android:text="jahir.sust@gmail.com"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/personal_email_button"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/circle_icon_selector"
                    android:scaleType="center"
                    android:src="@drawable/ic_email"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </LinearLayout>

        <!-- Phone Layout -->
        <LinearLayout
            android:id="@+id/number_full_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_full_layout"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="2dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/number_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_regular"
                android:text="@string/phone"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:weightSum="4">

                <TextView
                    android:id="@+id/phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:fontFamily="@font/oswald_regular"
                    android:text="+880-821-713850"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/phone_button"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/circle_icon_selector"
                    android:scaleType="center"
                    android:src="@drawable/ic_phone"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:weightSum="4">

                <TextView
                    android:id="@+id/mobile_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:fontFamily="@font/oswald_regular"
                    android:text="+01717777777"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/mobile_button"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/circle_icon_selector"
                    android:scaleType="center"
                    android:src="@drawable/ic_phone"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </LinearLayout>

        <!-- Website Layout -->
        <LinearLayout
            android:id="@+id/site_full_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/number_full_layout"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="2dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/site_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_regular"
                android:text="@string/website" />

            <LinearLayout
                android:id="@+id/site_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:weightSum="4">

                <TextView
                    android:id="@+id/site_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:fontFamily="@font/oswald_regular"
                    android:text="www.facebook.com"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/site_button"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/circle_icon_selector"
                    android:scaleType="center"
                    android:src="@drawable/ic_website"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
